force-app/main/default/objects/Reserva__c/Reserva__c.object-meta.xml
<CustomObject>
    <label>Reserva</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Reserva Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>