force-app/main/default/objects/Reserva__c/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento</label>
    <referenceTo>Evento__c</referenceTo>
    <relationshipLabel>Reservas</relationshipLabel>
    <relationshipName>Reservas</relationshipName>
    <type>Lookup</type>
</CustomField>