force-app/main/default/objects/Reserva__c/fields/Importe__c.field-meta.xml
<CustomField>
    <fullName>Importe__c</fullName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>