force-app/main/default/objects/Reserva__c/validationRules/Importe_negativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Importe_negativo</fullName>
    <active>true</active>
    <errorConditionFormula>Importe__c  &gt;= 0</errorConditionFormula>
    <errorMessage>No puede ser un importe menor a 0</errorMessage>
</ValidationRule>